@@ -81,6 +81,36 @@ import org.gradle.api.tasks.SourceSet
  *
  * Users should NOT change the CLI command, user directory, etc. directly.
  * Please refer to the `compiler { }` extension configuring the Compiler.
+ *
+ * ## Attaching instrumentation to the forked JVM
+ *
+ * The fork options of this task are part of its public contract: JVM arguments
+ * a consumer build appends — via the additive [jvmArgs] function or via
+ * `jvmArgumentProviders` — are preserved and passed to the forked JVM next to
+ * the defaults added by the task itself. Assigning the `jvmArgs` property
+ * (`setJvmArgs(...)`) is outside the contract: it replaces the defaults,
+ * including the `--add-opens` arguments the Compiler relies on.
+ * Consumer builds use the appending forms to attach instrumentation — for
+ * example, the JaCoCo agent (`-javaagent:`) capturing the coverage of the
+ * Compiler plugins executed inside the fork, or a remote-debug agent.
+ * The contract is locked by regression tests.
+ *
+ * For example, to capture the coverage of the Compiler plugins:
+ *
+ * ```kotlin
+ * val jacocoAgent: Configuration by configurations.creating
+ *
+ * dependencies {
+ *     jacocoAgent("org.jacoco:org.jacoco.agent:<version>:runtime")
+ * }
+ *
+ * tasks.withType<LaunchSpineCompiler>().configureEach {
+ *     val execFile = layout.buildDirectory.file("jacoco-compiler/$name.exec")
+ *     jvmArgumentProviders.add(CommandLineArgumentProvider {
+ *         listOf("-javaagent:${jacocoAgent.singleFile}=destfile=${execFile.get().asFile}")
+ *     })
+ * }
+ * ```
  */
 @CacheableTask
 public abstract class LaunchSpineCompiler : JavaExec() {
